# Swage

./: Cargo.toml  Makefile  README.md
crates/allocators/: README.md
crates/allocators/swage-coco/: Cargo.toml
crates/allocators/swage-coco/src/: coco.rs  lib.rs
crates/allocators/swage-hugepage/: Cargo.toml
crates/allocators/swage-hugepage/src/: hugepage.rs  hugepage_rnd.rs  lib.rs
crates/allocators/swage-pfn/: Cargo.toml
crates/allocators/swage-pfn/src/: lib.rs  pfn.rs
crates/allocators/swage-spoiler/: Cargo.toml  build.rs
crates/allocators/swage-spoiler/lib/spoiler/include/: misc.h  spoiler.h
crates/allocators/swage-spoiler/lib/spoiler/src/: spoiler.c
crates/allocators/swage-spoiler/src/: lib.rs  spoiler.rs
crates/allocators/swage-thp/: Cargo.toml
crates/allocators/swage-thp/src/: lib.rs
crates/hammerers/: README.md
crates/hammerers/swage-blacksmith/: Cargo.toml
crates/hammerers/swage-blacksmith/examples/: bank_order.rs
crates/hammerers/swage-blacksmith/src/: blacksmith_config.rs  hammerer.rs  jitter.rs  lib.rs
crates/hammerers/swage-dev-mem/: Cargo.toml
crates/hammerers/swage-dev-mem/src/: dev_mem.rs  lib.rs
crates/hammerers/swage-dummy/: Cargo.toml
crates/hammerers/swage-dummy/src/: dummy.rs  lib.rs
crates/swage-core/: Cargo.toml
crates/swage-core/src/: allocator.rs  hammerer.rs  lib.rs  mem_check.rs  page_inject.rs  swage.rs  victim.rs
crates/swage-core/src/memory/: README.md  consec_blocks.rs  dram_addr.rs  flippy_page.rs  mem_configuration.rs  memblock.rs  mod.rs  pagemap_info.rs  pfn_offset.rs  pfn_offset_resolver.rs  pfn_resolver.rs  timer.rs  virt_to_phys.rs
crates/swage-core/src/util/: README.md  alloc_util.rs  cancelable_thread.rs  constants.rs  mod.rs  named_progress.rs  rng.rs  size.rs
crates/swage-victim-dev-memcheck/: Cargo.toml
crates/swage-victim-dev-memcheck/src/: dev_mem_check.rs  lib.rs
lib/memutils/: memutils.c  memutils.h
src/: lib.rs
swage-bin/: Cargo.toml
swage-bin/src/: allocator.rs  lib.rs
tests/: integration_test.rs
