[package]
name = "swage-bin"
version = "0.2.0"
edition = "2024"

[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies.x86]
version = "0.52.0"
features = ["performance-counter"]

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
clap = { version = "4.3", features = ["derive"] }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
log = { workspace = true }
libc = { workspace = true }
env_logger = "0.11.5"
indicatif = { workspace = true }
indicatif-log-bridge = "0.2"

# Swage core
swage-core = { workspace = true }

# swage-allocators
swage-hugepage = { workspace = true }
swage-mmap = { workspace = true }
swage-spoiler = { workspace = true }
swage-pfn = { workspace = true }

# Swage-hammerers
swage-blacksmith = { workspace = true }