[package]
name = "swage-core"
version = "0.2.0"
edition = "2024"
description = "Swage core components."
repository = "https://github.com/UzL-ITS/swage"
license = "MIT"
keywords = ["rowhammer", "security", "memory", "hardware", "attack"]
categories = ["security"]

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
libc = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json ={ workspace = true }
log = { workspace = true }
pagemap2 = "0.1.1"
itertools = { workspace = true }
indicatif = { workspace = true }
thiserror = { workspace = true }

chrono = "0.4.41"

[dev-dependencies]
anyhow = "1.0.100"
