[package]
name = "swage-coco"
version = "0.2.0"
edition = "2024"
description = "CoCo allocator module for Swage."
repository = "https://github.com/UzL-ITS/swage"
license = "MIT"
keywords = ["rowhammer", "security", "memory", "hardware", "attack"]
categories = ["security"]

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
libc = { workspace = true }

swage-core = { workspace = true }