[package]
name = "swage-blacksmith"
version = "0.2.0"
edition = "2024"
description = "Blacksmith hammerer module for Swage."
repository = "https://github.com/UzL-ITS/swage"
license = "MIT"
keywords = ["rowhammer", "security", "memory", "hardware", "attack"]
categories = ["security"]

[package.metadata.docs.rs]
all_features = true
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-unknown-linux-gnu"]

[features]
jitter_dump = []
iperf = ["dep:perfcnt"]

[dependencies]
memmap2 = "0.9.8"
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = "3.0.0"
nalgebra = "0.34.1"
log = { workspace = true }
itertools = { workspace = true }
perfcnt = { version = "0.8.0", optional = true }
iced-x86 = { version = "1.19.0", features = ["code_asm"] }
swage-core = { workspace = true }
thiserror =  { workspace = true }

[dev-dependencies]
clap = { version = "4.3", features = ["derive"] }
env_logger = "0.11"